@@ -16083,6 +16083,19 @@ Number of client connections (excluding connections from slaves).
 *`redis.info.clients.longest_output_list`*::
 +
 --
+
+deprecated[6.5.0]
+
+type: long
+
+Longest output list among current client connections (replaced by max_output_buffer).
+
+
+--
+
+*`redis.info.clients.max_output_buffer`*::
++
+--
 type: long
 
 Longest output list among current client connections.
@@ -16093,9 +16106,22 @@ Longest output list among current client connections.
 *`redis.info.clients.biggest_input_buf`*::
 +
 --
+
+deprecated[6.5.0]
+
 type: long
 
-Biggest input buffer among current client connections.
+Biggest input buffer among current client connections (replaced by max_input_buffer).
+
+
+--
+
+*`redis.info.clients.max_input_buffer`*::
++
+--
+type: long
+
+Biggest input buffer among current client connections (on redis 5.0).
 
 
 --
