@@ -22,5 +22,5 @@ The Redis module has these additional config options:
 [float]
 === Compatibility
 
-The Redis metricsets were tested with Redis 3.2.4 and are expected to work with all version
->= 3.0.
+The Redis metricsets were tested with Redis 3.2.12, 4.0.11 and 5.0-rc4,  and are expected
+to work with all versions >= 3.0.
