@@ -91,6 +91,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - Move common kafka fields (broker, topic and partition.id) to the module level to facilitate events correlation {pull}7767[7767]
 - Add fields for memory fragmentation, memory allocator stats, copy on write, master-slave status, and active defragmentation to `info` metricset of Redis module. {pull}7695[7695]
 - Increase ignore_above for system.process.cmdline to 2048. {pull}8101[8100]
+- Add support to renamed fields planned for redis 5.0. {pull}8167[8167]
 
 
 - Add `metrics` metricset to MongoDB module. {pull}7611[7611]
@@ -110,6 +111,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 
 *Metricbeat*
 - Redis `info` `replication.master_offset` has been deprecated in favor of `replication.master.offset`.{pull}7695[7695]
+- Redis `info` clients fields `longest_output_list` and `biggest_input_buf` have been renamed to `max_output_buffer` and `max_input_buffer` based on the names they will have in Redis 5.0, both fields will coexist during a time with the same value {pull}8167[8167].
 
 - Move common kafka fields (broker, topic and partition.id) to the module level {pull}7767[7767].
 
